--- a/printer.cfg
+++ b/printer.cfg
@@ -15,7 +15,7 @@ square_corner_velocity: 10.0
 #   Temp sensors
 #####################################################################
 
-[temperature_sensor mcu_temp]
+[temperature_sensor cheetah]
 sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
@@ -25,12 +25,12 @@ sensor_type: temperature_host
 min_temp: 10
 max_temp: 100
 
-# [temperature_sensor chamber]
-# sensor_type: Generic 3950 
-# sensor_pin: PB1
-# min_temp: 0
-# max_temp: 100
-# gcode_id: C
+[temperature_sensor chamber]
+sensor_type: Generic 3950 
+sensor_pin: PB1
+min_temp: 0
+max_temp: 100
+gcode_id: C
 
 #####################################################################
 #   X Stepper Settings
@@ -97,11 +97,10 @@ step_pin: PB4
 dir_pin: !PB5
 enable_pin: !PC2
 rotation_distance: 8
-microsteps: 16
+microsteps: 32
 endstop_pin: ^PC4
-position_endstop: 120
 position_max: 120
-position_min: -3.0
+position_min: -1.5
 homing_speed: 20
 second_homing_speed: 3.0
 homing_retract_dist: 3.0
@@ -110,8 +109,8 @@ homing_retract_dist: 3.0
 uart_pin: PB3
 uart_address: 2
 interpolate: False
-run_current: 0.45
-sense_resistor: 0.110
+run_current: 0.3
+sense_resistor: 0.220
 stealthchop_threshold: 0
 
 #####################################################################
@@ -198,11 +197,6 @@ heater: extruder
 [idle_timeout]
 timeout: 1800
 
-# [safe_z_home]
-# home_xy_position: 120,120
-# speed: 50.0
-# z_hop: 5
-
 [bed_screws]
 screw1: 60,2
 screw1_name: front screw
@@ -280,7 +274,7 @@ gcode:
   
   {% if home_all or 'Z' in params %}
     G28 Z
-    G1 Z-25
+    # G1 Z-25
   {% endif %}
 
 [gcode_macro LOAD_FILAMENT]
@@ -296,6 +290,7 @@ gcode:
    G1 E10 F300                    ; extrude a little to soften tip
    G1 E-40 F1800                  ; retract some, but not too much or it will jam
    M82                            ; set extruder to absolute
+
 
 [pause_resume]
 
@@ -335,6 +330,7 @@ gcode:
     G90
     G1 X{x} Y{y} F6000
 
+
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 gcode:
@@ -347,28 +343,21 @@ gcode:
     BASE_RESUME
 
 ################################################################################
+#   Macros
 ################################################################################
-
 [gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customize for your slicer of choice
 gcode:
-    {% set bed = params.BED|int %}
-    {% set extruder = params.EXTRUDER|int %}
-    M140 S{bed}
-    M104 T0 S{extruder}
-    M109 T0 S{extruder}
-    M190 S{bed}
+    {% set BED_TEMP = params.BED_TEMP|default(0)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(0)|float %}
+    M140 S{BED_TEMP}
+    M104 T0 S{EXTRUDER_TEMP}
+    M109 T0 S{EXTRUDER_TEMP}
+    M190 S{BED_TEMP}
     G90
     M107
     M82
     G28
-    G92 E0
-    G1 X110 Y7 F2000
-    G1 Z0.28 F400
-    G1 X30 Y7 E18 F1000
-    G1 Z0.5 F200
-    G92 E0
-
+    
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customize for your slicer of choice
 gcode:
@@ -406,5 +395,11 @@ gcode:
     TURN_OFF_HEATERS
     M107                           ; turn off fan
     G90                            ; absolute positioning
-    G0 X60 Y{max_y} F3600          ; park nozzle at rear
+    G0 X60 Y60 Z100 F3600          ; park nozzle at middle
     SET_SKEW CLEAR=1
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = 118.835
